// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Developers dashboard test should render developers dashboard without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DeveloperDashboard
    getManagerFellowsSummary={[Function]}
    user={
        Object {
            "email": "ty@andela.com",
            "roles": Object {
              "WATCH_TOWER_TTL": "34323234Yf-34",
            },
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Unknown>
        <div>
                <div
                        className="ops-dashboard__fellows-summary fellow-summary-page-header"
                >
                        <span
                                className="header-underline mr-2 pb-2"
                        >
                                0 Total
                        </span>
                        <span
                                className="mr-3"
                        >
                                Fellow (Filtered)
                        </span>
                        <FilterButton
                                clearFilters={[Function]}
                        />
                </div>
        </div>
        <div
                className=""
        >
                <MapFellowsSummary
                        fellowsSummaryCardDetails={Array []}
                />
        </div>
</Unknown>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div>
            <div
                        className="ops-dashboard__fellows-summary fellow-summary-page-header"
            >
                        <span
                                    className="header-underline mr-2 pb-2"
                        >
                                    0 Total
                        </span>
                        <span
                                    className="mr-3"
                        >
                                    Fellow (Filtered)
                        </span>
                        <FilterButton
                                    clearFilters={[Function]}
                        />
            </div>
</div>,
          <div
            className=""
>
            <MapFellowsSummary
                        fellowsSummaryCardDetails={Array []}
            />
</div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="ops-dashboard__fellows-summary fellow-summary-page-header"
>
              <span
                            className="header-underline mr-2 pb-2"
              >
                            0 Total
              </span>
              <span
                            className="mr-3"
              >
                            Fellow (Filtered)
              </span>
              <FilterButton
                            clearFilters={[Function]}
              />
</div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="header-underline mr-2 pb-2"
>
                  0 Total
</span>,
                <span
                  className="mr-3"
>
                  Fellow (Filtered)
</span>,
                <FilterButton
                  clearFilters={[Function]}
/>,
              ],
              "className": "ops-dashboard__fellows-summary fellow-summary-page-header",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "0 Total",
                  "className": "header-underline mr-2 pb-2",
                },
                "ref": null,
                "rendered": "0 Total",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Fellow (Filtered)",
                  "className": "mr-3",
                },
                "ref": null,
                "rendered": "Fellow (Filtered)",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "clearFilters": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <MapFellowsSummary
              fellowsSummaryCardDetails={Array []}
/>,
            "className": "",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "fellowsSummaryCardDetails": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": Symbol(react.fragment),
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown>
          <div>
                    <div
                              className="ops-dashboard__fellows-summary fellow-summary-page-header"
                    >
                              <span
                                        className="header-underline mr-2 pb-2"
                              >
                                        0 Total
                              </span>
                              <span
                                        className="mr-3"
                              >
                                        Fellow (Filtered)
                              </span>
                              <FilterButton
                                        clearFilters={[Function]}
                              />
                    </div>
          </div>
          <div
                    className=""
          >
                    <MapFellowsSummary
                              fellowsSummaryCardDetails={Array []}
                    />
          </div>
</Unknown>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <div>
              <div
                            className="ops-dashboard__fellows-summary fellow-summary-page-header"
              >
                            <span
                                          className="header-underline mr-2 pb-2"
                            >
                                          0 Total
                            </span>
                            <span
                                          className="mr-3"
                            >
                                          Fellow (Filtered)
                            </span>
                            <FilterButton
                                          clearFilters={[Function]}
                            />
              </div>
</div>,
            <div
              className=""
>
              <MapFellowsSummary
                            fellowsSummaryCardDetails={Array []}
              />
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="ops-dashboard__fellows-summary fellow-summary-page-header"
>
                <span
                                className="header-underline mr-2 pb-2"
                >
                                0 Total
                </span>
                <span
                                className="mr-3"
                >
                                Fellow (Filtered)
                </span>
                <FilterButton
                                clearFilters={[Function]}
                />
</div>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="header-underline mr-2 pb-2"
>
                    0 Total
</span>,
                  <span
                    className="mr-3"
>
                    Fellow (Filtered)
</span>,
                  <FilterButton
                    clearFilters={[Function]}
/>,
                ],
                "className": "ops-dashboard__fellows-summary fellow-summary-page-header",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "0 Total",
                    "className": "header-underline mr-2 pb-2",
                  },
                  "ref": null,
                  "rendered": "0 Total",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Fellow (Filtered)",
                    "className": "mr-3",
                  },
                  "ref": null,
                  "rendered": "Fellow (Filtered)",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "clearFilters": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <MapFellowsSummary
                fellowsSummaryCardDetails={Array []}
/>,
              "className": "",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "fellowsSummaryCardDetails": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": Symbol(react.fragment),
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Developers dashboard test should render developers dashboard without crashing 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DeveloperDashboard
    getManagerFellowsSummary={[Function]}
    user={
        Object {
            "email": "ty@andela.com",
            "roles": Object {
              "WATCH_TOWER_SL": "34323234Yf-34",
            },
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Unknown>
        <div>
                <div
                        className="ops-dashboard__fellows-summary fellow-summary-page-header"
                >
                        <span
                                className="header-underline mr-2 pb-2"
                        >
                                0 Total
                        </span>
                        <span
                                className="mr-3"
                        >
                                Fellow (Filtered)
                        </span>
                        <FilterButton
                                clearFilters={[Function]}
                        />
                </div>
        </div>
        <div
                className=""
        >
                <MapFellowsSummary
                        fellowsSummaryCardDetails={Array []}
                />
        </div>
</Unknown>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div>
            <div
                        className="ops-dashboard__fellows-summary fellow-summary-page-header"
            >
                        <span
                                    className="header-underline mr-2 pb-2"
                        >
                                    0 Total
                        </span>
                        <span
                                    className="mr-3"
                        >
                                    Fellow (Filtered)
                        </span>
                        <FilterButton
                                    clearFilters={[Function]}
                        />
            </div>
</div>,
          <div
            className=""
>
            <MapFellowsSummary
                        fellowsSummaryCardDetails={Array []}
            />
</div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="ops-dashboard__fellows-summary fellow-summary-page-header"
>
              <span
                            className="header-underline mr-2 pb-2"
              >
                            0 Total
              </span>
              <span
                            className="mr-3"
              >
                            Fellow (Filtered)
              </span>
              <FilterButton
                            clearFilters={[Function]}
              />
</div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="header-underline mr-2 pb-2"
>
                  0 Total
</span>,
                <span
                  className="mr-3"
>
                  Fellow (Filtered)
</span>,
                <FilterButton
                  clearFilters={[Function]}
/>,
              ],
              "className": "ops-dashboard__fellows-summary fellow-summary-page-header",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "0 Total",
                  "className": "header-underline mr-2 pb-2",
                },
                "ref": null,
                "rendered": "0 Total",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Fellow (Filtered)",
                  "className": "mr-3",
                },
                "ref": null,
                "rendered": "Fellow (Filtered)",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "clearFilters": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <MapFellowsSummary
              fellowsSummaryCardDetails={Array []}
/>,
            "className": "",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "fellowsSummaryCardDetails": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": Symbol(react.fragment),
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown>
          <div>
                    <div
                              className="ops-dashboard__fellows-summary fellow-summary-page-header"
                    >
                              <span
                                        className="header-underline mr-2 pb-2"
                              >
                                        0 Total
                              </span>
                              <span
                                        className="mr-3"
                              >
                                        Fellow (Filtered)
                              </span>
                              <FilterButton
                                        clearFilters={[Function]}
                              />
                    </div>
          </div>
          <div
                    className=""
          >
                    <MapFellowsSummary
                              fellowsSummaryCardDetails={Array []}
                    />
          </div>
</Unknown>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <div>
              <div
                            className="ops-dashboard__fellows-summary fellow-summary-page-header"
              >
                            <span
                                          className="header-underline mr-2 pb-2"
                            >
                                          0 Total
                            </span>
                            <span
                                          className="mr-3"
                            >
                                          Fellow (Filtered)
                            </span>
                            <FilterButton
                                          clearFilters={[Function]}
                            />
              </div>
</div>,
            <div
              className=""
>
              <MapFellowsSummary
                            fellowsSummaryCardDetails={Array []}
              />
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="ops-dashboard__fellows-summary fellow-summary-page-header"
>
                <span
                                className="header-underline mr-2 pb-2"
                >
                                0 Total
                </span>
                <span
                                className="mr-3"
                >
                                Fellow (Filtered)
                </span>
                <FilterButton
                                clearFilters={[Function]}
                />
</div>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="header-underline mr-2 pb-2"
>
                    0 Total
</span>,
                  <span
                    className="mr-3"
>
                    Fellow (Filtered)
</span>,
                  <FilterButton
                    clearFilters={[Function]}
/>,
                ],
                "className": "ops-dashboard__fellows-summary fellow-summary-page-header",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "0 Total",
                    "className": "header-underline mr-2 pb-2",
                  },
                  "ref": null,
                  "rendered": "0 Total",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Fellow (Filtered)",
                    "className": "mr-3",
                  },
                  "ref": null,
                  "rendered": "Fellow (Filtered)",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "clearFilters": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <MapFellowsSummary
                fellowsSummaryCardDetails={Array []}
/>,
              "className": "",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "fellowsSummaryCardDetails": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": Symbol(react.fragment),
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
